# one-rom

./: .gitignore  CHANGELOG.md  INSTALL.md  Makefile  README.md  RELEASE.md
.github/workflows/: build-msi.yml  build-studio.yml  ci.yml  release.yml
ci/: blacklist-config.txt  build-cross-fw.sh  build-images.sh  build-variants.txt  build.sh  rust-docs.sh  rust-tests.sh  tests.txt
ci/docker/: Dockerfile.build  README.md
config/: c64-no-destestmax.mk  sample.json  set-c64.mk  set-vic20-pal.mk  test-0.json  vic20-ntsc.mk
docs/: BUILD-SYSTEM.md  CHIP-TYPES.md  CONFIGURATION.md  FAQ.md  GETTING-STARTED.md  LOGGING.md  MCU-SELECTION.md  PI-PICO-PROGRAMMER.md  ROM-TYPES.md  adrian.md  release-notes-common.md
images/test/: rand_65536.rom  rand_8192.rom
old-config/: README.md  vic20-pal.mk
onerom-config/: ram-24.json  schema.json  vic20-ntsc.json
releases/: manifest-latest.json  manifest-v0.4.4.json  manifest-v0.5.0.json  manifest-v0.5.1.json  manifest-v0.5.10.json  manifest-v0.5.2.json  manifest-v0.5.3.json  manifest-v0.5.4.json  manifest-v0.5.5.json  manifest-v0.5.6.json  manifest-v0.5.7.json  manifest-v0.5.8.json  manifest-v0.5.9.json  manifest-v0.6.0.json  manifest-v0.6.1.json  manifest-v0.6.2.json  releases.json
rom-config/: 1541.json  2040.json  28-1541ii.json  28-c64c.json  4040.json  README.md  atari800xl.json  bank-1541.json  bank-c64-char-fun.json  bank-c64-char.json  bank-vic20-char-fun.json  bank-vic20-char.json  c64-inc-destestmax.json  c64.json  coco2.json  ieee-diag.json  pet-4-40-50.json  sample.json  schema.json  set-1541.json  set-c64.json  set-vic20-pal.json  ti994a.json  vic20-ntsc.json  vic20-pal.json
rust/: Cargo.toml
rust/config/: .gitignore  Cargo.toml
rust/config/json/: README.md  chip-types.json  fire-24-a.json  fire-24-c.json  fire-24-d.json  fire-24-e.json  fire-24-usb-b.json  fire-28-a.json  fire-40-a.json  ice-24-d.json  ice-24-e.json  ice-24-f.json  ice-24-g.json  ice-24-i.json  ice-24-j.json  ice-24-usb-h.json  ice-28-a.json  rom-types.json
rust/config/src/: fw.rs  lib.rs  mcu.rs
rust/config/src/chip/: README.md
rust/config/tests/: chip_generated_tests.rs  chip_validation_tests.rs  rom_validation_tests.rs
rust/database/: Cargo.toml  build.rs
rust/database/roms/: 1541.csv  2040.csv  4040.csv  c64.csv  pet.csv  vic20.csv
rust/database/src/: types.rs
rust/fw/: Cargo.toml  README.md
rust/fw/src/: args.rs  error.rs  lib.rs  main.rs  net.rs
rust/lab/: Cargo.toml  README.md  build-vars.sh  build.rs  flash-usb.sh
rust/lab/.cargo/: config.toml
rust/lab/ci/: check.sh
rust/lab/src/: info.rs  logs.rs  main.rs  main_rp.rs  rcc.rs  rom.rs  usb.rs
rust/schema-gen/: Cargo.toml
rust/schema-gen/src/: main.rs
rust/sdrr-common/: Cargo.toml
rust/sdrr-common/src/: args.rs  hardware.rs  lib.rs  sdrr_types.rs
rust/sdrr-fw-parser/: Cargo.toml
rust/sdrr-fw-parser/src/: info.rs  lab.rs  lib.rs  parsing.rs  readers.rs  types.rs
rust/sdrr-gen/: Cargo.toml
rust/sdrr-gen/src/: args.rs  config.rs  file.rs  fw.rs  generator.rs  main.rs  preprocessor.rs
rust/sdrr-info/: Cargo.toml
rust/sdrr-info/src/: args.rs  main.rs  utils.rs
rust/studio/: CHANGELOG.md  Cargo.toml  Packager.toml  README.md  build.rs
rust/studio/manifest/: app-schema.json  sample-studio.json
rust/studio/scripts/: build-linux.sh  build-mac.sh  build-release.sh  build-win.ps1  inject-deb-scripts.sh  install-signing-cert.ps1  release.py  sign-win.ps1  update-dmg.py
rust/studio/scripts/certs/: README.md  https_cert.pem
rust/studio/src/: analyse.rs  app.rs  built.rs  config.rs  create.rs  device.rs  hw.rs  log.rs  main.rs  studio.rs  style.rs
rust/studio/src/analyse/: device.rs  view.rs
rust/studio/src/app/: manifest.rs
rust/studio/src/create/: build.rs  file.rs  mod.rs  msg.rs  view.rs
rust/studio/src/device/: mod.rs  msg.rs  probe.rs  usb.rs
rust/wasm/: Cargo.toml  LICENSE.md  README.md  build.sh  test.sh
rust/wasm/src/: lib.rs
rust/wasm/tests/wasm/: test.html
scripts/: README.md  _append-metadata.sh  _bin-to-elf.sh  _flash-and-run-elf.sh  add-and-run.sh  add.sh  build-empty-fw.sh  onerom.sh
sdrr/: Makefile
sdrr-hw-config/: 24-h.json
sdrr-pcb/: PANELISING.md  README.md
sdrr-pcb/panels/: README.md
sdrr-pcb/support/: fire-24-d-5x4-panel-config.json
sdrr-pcb/unverified/: README.md
sdrr-pcb/unverified/fire-24-c/: README.md
sdrr-pcb/unverified/fire-24-c/fab/: fire-24-c-top-pos.csv
sdrr-pcb/unverified/fire-24-c/kicad/: fire-24-c.kicad_sch
sdrr-pcb/unverified/fire-24-d/: README.md
sdrr-pcb/unverified/fire-24-d/kicad/: fire-24-d.kicad_pro  (+1 more)
sdrr-pcb/unverified/fire-24-e/: README.md
sdrr-pcb/unverified/fire-28-a/: README.md
sdrr-pcb/unverified/fire-28-a3/: README.md
sdrr-pcb/unverified/fire-40-a/: README.md
sdrr-pcb/unverified/ice-24-i/: README.md
sdrr-pcb/unverified/ice-24-j/: README.md
sdrr-pcb/unverified/one-rom-fire-usb-b-24-pin/: README.md
sdrr-pcb/unverified/one-rom-ice-usb-h2-24-pin/: README.md
sdrr-pcb/unverified/stm32f4-28-pin-rev-a/: README.md
sdrr-pcb/verified/: README.md
sdrr-pcb/verified/fire-24-c/: README.md
sdrr-pcb/verified/fire-24-d/: README.md
sdrr-pcb/verified/fire-28-a/: README.md
sdrr-pcb/verified/fire-28-a2/: README.md
sdrr-pcb/verified/fire-28-a3/: README.md
sdrr-pcb/verified/ice-24-i/: README.md
sdrr-pcb/verified/ice-24-j/: README.md
sdrr-pcb/verified/ice-24-usb-h3/: README.md
sdrr/include/: config_base.h  constants.h  enums.h  functions.h  include.h  reg-rp235x.h  reg-stm32f4.h  rp235x_inlines.h  stm32f4_inlines.h  types.h
sdrr/include/piodma/: dmareg.h  pioasm.h  piodma.h  pioreg.h
sdrr/link/: common.ld  common_vars.ld  ram_bss.ld  ram_data.ld  ram_sdrr_runtime_info.ld
sdrr/src/: constants.c  main.c  piorom.c  rom_asm.h  rom_impl.c  rp235x.c  stm32f4.c  utils.c  vector.c
sdrr/src/piodma/: dma.c  pio.c  piodis.c  pioram.c  piorom.c
site/: LICENSE.web-stm32-updater  index.html  style.css  usbDfuDevice.js
test/: Makefile  README.md
test/include/: json-config.h  roms-test.h
test/src/: check-roms.c  json-config.c  main.c  query-roms.c  roms-config.c
(+61 files in other folders)
