# Workspace configuration for the Rust elements of the SDRR project
[workspace]
members = [
    "sdrr-gen",
    "sdrr-info", 
    "sdrr-common",
    "sdrr-fw-parser",
    "sdrr-check",
    "lab",
    "database"
]
default-members = [
    "sdrr-gen",
    "sdrr-info", 
    "sdrr-common",
    "sdrr-fw-parser"
]
resolver = "2"