# Workspace configuration for the Rust elements of the SDRR project
[workspace]
members = [
    "config",
    "database",
    "gen",
    "lab",
    "sdrr-check",
    "sdrr-fw-parser",
    "sdrr-gen",
    "sdrr-info" 
]
default-members = [
    "config",
    "sdrr-fw-parser",
    "sdrr-gen",
    "sdrr-info"
]
resolver = "2"