[package]
name = "onerom-lab"
version = "0.1.0"
edition = "2024"
authors = ["Piers Finlayson <piers@piers.rocks>"]
description = "One ROM Lab"
repository = "https://github.com/piersfinlayson/one-rom"
readme = "README.md"
license = "MIT"
keywords = ["embedded", "rom", "eeprom", "eprom", "flash"]

[[bin]]
name = "onerom-lab"
path = "src/main.rs"

[[bin]]
name = "onerom-lab-fire"
path = "src/main_rp.rs"

[features]
default = [ "validate-24-ice" ]
validate-24-ice = [ "f411re", "qa", "pin-24" ]
validate-28-fire = [ "rp2350", "qa", "pin-28" ]
stm32f4 = [ "cortex-m/critical-section-single-core", "embassy-time/tick-hz-32_768" ]
f405rg = [ "embassy-stm32/stm32f405rg", "stm32f4" ]
f401re = [ "embassy-stm32/stm32f401re", "stm32f4" ]
f411re = [ "embassy-stm32/stm32f411re", "stm32f4" ]
f446re = [ "embassy-stm32/stm32f446re", "stm32f4" ]
rp2350 = [ "embassy-rp/rp235xa" ]
qa = []
control = []
oneshot = []
repeat = []
usb = ["embassy-usb","panic-probe"]
pin-24 = []
pin-28 = []

[dependencies]
onerom-protocol = { version = "0.1.0" }
onerom-database = { path="../database", version = "0.1.1" }

airfrog-rpc = { version = "0.1.1" }
embassy-executor = { version = "0.7.0", features = ["executor-thread", "arch-cortex-m", "nightly" ]}
embassy-futures = { version = "0.1.1" }
embassy-stm32 = { version = "0.4.0", features = [ "memory-x", "time-driver-any", "unstable-pac", "exti" ], optional = true }
embassy-rp = { version = "0.8.0", features = [ "rt", "unstable-pac", "time-driver", "intrinsics", "critical-section-impl", "imagedef-secure-exe", "boot2-generic-03h" ], optional = true }
embassy-sync = { version = "0.7.0" }
embassy-time = { version = "0.5", features = [ "generic-queue-8" ] }
embassy-usb = { version = "0.5", optional = true }
embedded-alloc = { version = "0.6" }
portable-atomic = { version = "1.10", features = [ "critical-section" ] }
cortex-m = { version = "0.7.6", features = [] }
cortex-m-rt = { version = "0.7.0"}
static_cell = { version = "2.1", features = [ "nightly" ] }
embedded-hal = { version = "1.0.0"}
critical-section = { version = "1.2.0" }
hex = { version = "0.4", default-features = false, features = [ "alloc" ] }
hex-literal = "1.0.0"
log = "0.4"
sha1 = { version = "0.10", default-features = false }
rtt-target = { version = "0.6", features = [ "log" ] }
panic-probe = { version = "1.0", optional = true }
panic-rtt-target = "0.2"

[build-dependencies]
built = "0.8"
csv = "1.3"
