[package]
name = "sdrr-gen"
version = "0.5.1"
edition = "2024"
authors = ["Piers Finlayson <piers@piers.rocks>"]
description = "One ROM firmware generator"
repository = "https://github.com/piersfinlayson/one-rom"
readme = "README.md"
license = "MIT"
keywords = ["embedded", "rom", "eeprom", "eprom", "flash"]

[dependencies]
onerom-config = { version = "0.1.2" }
onerom-gen = { version = "0.1" }

anyhow = ">=1.0.98"
bytes = ">=1.10.1"
clap = { version = "4.5.41", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "rustls-tls", "gzip", "deflate", "brotli", "cookies"], default-features = false }
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.12"
urlencoding = "2.1"
zip = "4.3.0"
