[package]
name = "onerom-wasm"
version = "0.1.0"
edition = "2024"
authors = ["Piers Finlayson <piers@piers.rocks>"]
description = "One ROM Supporting Tooling Web Assembly Implementation"
repository = "https://github.com/piersfinlayson/one-rom"
readme = "README.md"
license = "MIT"
keywords = ["embedded", "rom", "eeprom", "eprom", "flash"]

[lib]
crate-type = ["cdylib"]
name = "onerom_wasm"
path = "src/lib.rs"

[dependencies]
sdrr-fw-parser = { path = "../sdrr-fw-parser", default-features = false }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
console_log = "1.0"
log = "0.4"
